objects/EFX__Debug_Log__c.object
<CustomObject>
    <fields>
        <fullName>EFX__Area__c</fullName>
        <label>Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EFX__Debug_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Debug Header</label>
        <referenceTo>EFX__Debug_Header__c</referenceTo>
        <relationshipLabel>Debug Logs</relationshipLabel>
        <relationshipName>Debug_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EFX__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EFX__Exception_Stack_Trace__c</fullName>
        <label>Exception Stack Trace</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFX__Exception_Type__c</fullName>
        <label>Exception Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFX__Line_number__c</fullName>
        <description>The line at which the exception was thrown.</description>
        <inlineHelpText>The line at which the exception was thrown.</inlineHelpText>
        <label>Line number</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EFX__Record_Detail__c</fullName>
        <label>Record Detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFX__Record_Type__c</fullName>
        <label>Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFX__Source__c</fullName>
        <label>Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFX__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>System Exception</fullName>
                </value>
                <value>
                    <fullName>Custom Exception</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EFX__eFax__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>eFax</label>
        <referenceTo>EFX__efax__c</referenceTo>
        <relationshipLabel>Debug Logs</relationshipLabel>
        <relationshipName>Debug_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Debug Log</label>
    <listViews>
        <fullName>EFX__All</fullName>
        <columns>NAME</columns>
        <columns>EFX__Exception_Type__c</columns>
        <columns>EFX__Description__c</columns>
        <columns>EFX__Exception_Stack_Trace__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DL-{0000000}</displayFormat>
        <label>Debug Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debug Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>